@@ -13,6 +13,8 @@ Lib/
 
 Modules/
 * Changed internal API List_to_LDAPControls() to LDAPControls_from_object()
+* Supported was added for retrieving the SASL username during SASL bind with
+  ldap_get_option(LDAP_OPT_X_SASL_USERNAME) if available in libldap.
 
 ----------------------------------------------------------------
 Released 2.3.9 2009-07-26
